--- a/cloud-provider-payment8001/src/main/resources/application.yaml
+++ b/cloud-provider-payment8001/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
     username: root
     password: 123456
 mybatis:
   # mapper文件所在的位置
   mapper-locations: classpath:mapper/*.xml
   # 实体类别名
-  type-aliases-package: com.ldh.spring.cloud.entity
+  type-aliases-package: com.ldh.spring.cloud.entities
