--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -2,9 +2,15 @@ server:
   port: 80
 
 spring:
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123456
+  application:
+    name: cloud-order-service
+
+# Eureka
+eureka:
+  client:
+    # 表示是否将自己注册到EurekaServer，默认为true
+    register-with-eureka: true
+    # 是否从EurekaServer中抓取已有的信息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
