--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -13,4 +13,7 @@ eureka:
     # 是否从EurekaServer中抓取已有的信息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      # 单机版
+      # defaultZone: http://localhost:7001/eureka
+      # 集群版
+      defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
