--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 7001
+  port: 7002
 
 #Eureka配置
 eureka:
   instance:
     # eureka服务端实力名称
-    hostname: localhost
+    hostname: 127.0.0.1
   client:
     # false表示不向注册中心注册自己
     register-with-eureka: false
@@ -14,5 +14,5 @@ eureka:
     service-url:
       # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
       # 集群，相互注册，相互守望，7001注册到7002，7002注册到7001
-      defaultZone: http://127.0.0.1:7002/eureka/
+      defaultZone: http://localhost:7001/eureka/
 
