--- a/cloud-provider-payment8001/src/main/resources/application.yaml
+++ b/cloud-provider-payment8001/src/main/resources/application.yaml
@@ -21,7 +21,10 @@ eureka:
     fetch-registry: true
     service-url:
       # 入驻地址，(避免写成default-zone)
-      defaultZone: http://localhost:7001/eureka
+      # 单机版
+      # defaultZone: http://localhost:7001/eureka
+      # 集群版
+      defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
 
 mybatis:
   # mapper文件所在的位置
