--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -25,6 +25,10 @@ eureka:
       # defaultZone: http://localhost:7001/eureka
       # 集群版
       defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
+  instance:
+    instance-id: payment8001
+    # 访问路径可以显示IP地址
+    prefer-ip-address: true
 
 mybatis:
   # mapper文件所在的位置
