--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -22,13 +22,17 @@ eureka:
     service-url:
       # 入驻地址，(避免写成default-zone)
       # 单机版
-      # defaultZone: http://localhost:7001/eureka
+      defaultZone: http://localhost:7001/eureka
       # 集群版
-      defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
+      # defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
   instance:
     instance-id: payment8001
     # 访问路径可以显示IP地址
     prefer-ip-address: true
+    # Eureka客户端向服务器端发送心跳的时间间隔，单位为秒（默认是30秒）
+    lease-renewal-interval-in-seconds: 1
+    # Eureka服务端在最后一次收到心跳后等待时间上限，单位为秒（默认是90秒），超时将被剔除
+    lease-expiration-duration-in-seconds: 2
 
 mybatis:
   # mapper文件所在的位置
