--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cloud-provider-payment8004</module>
         <module>cloud-consumerzk-order80</module>
         <module>cloud-providerconsul-payment8006</module>
+        <module>cloud-consumerconsul-order80</module>
     </modules>
     <packaging>pom</packaging>
 
