--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -13,7 +13,7 @@ eureka:
     fetch-registry: false
     service-url:
       # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://127.0.0.1:7002/eureka/
+      # defaultZone: http://127.0.0.1:7002/eureka/
       # 集群，相互注册，相互守望，7001注册到7002，7002注册到7001
-      # defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://localhost:7001/eureka/
 
