--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -6,17 +6,28 @@ spring:
     name: cloud-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true  # 开启从注册中心动态创建路由的功能，利用微服务名称进行路由
       # 网关路由
       routes:
         - id: payment_routh # payment_route    路由的id，没有固定规则但要求唯一，建议配合服务名
-          uri: http://localhost:8001 # 匹配后提供服务的路由地址
+          # uri: http://localhost:8001 # 匹配后提供服务的路由地址
+          uri: lb://cloud-payment-service
           predicates:
             - Path=/payment/get/**  # 断言，路径相匹配的进行路由
 
         - id: payment_routh2
-          uri: http://localhost:8001
+          # uri: http://localhost:8001
+          uri: lb://cloud-payment-service
           predicates:
             - Path=/payment/lb/**
+            # - Before=2022-10-28T15:24:28.717+08:00[Asia/Shanghai]  # 这个时间之前无法访问该地址
+            # - After=2022-10-28T16:24:28.717+08:00[Asia/Shanghai]  # 这个时间之后无法访问该地址
+            # - Between=2022-10-29T08:00:00.717+08:00[Asia/Shanghai],2022-10-30T22:00:00.717+08:00[Asia/Shanghai]  # 这个时间区间内可以访问该地址
+            # - Cookie=username,ldh
+            # - Header=X-Request-Id, \d+ #请求头要有X-Request-Id属性，并且值为正数
+
 
 eureka:
   client:
